samples/_failures_safe/1761285804_8c92c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ab3d54e.c: In function ‘bfs’:
./samples/SAFE/__tmp_3ab3d54e.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3ab3d54e.c:167:9: error: expected declaration or statement at end of input
  167 |         for
      |         ^~~
./samples/SAFE/__tmp_3ab3d54e.c:167:9: error: expected declaration or statement at end of input
